<?xml version="1.0"?>
<package format="3">
  <name>mdds30_controller</name>
  <version>0.0.1</version>
  <description>
    This package is the interface with the Cytron SmartDriveDuo-30 MDDS30 motor controller.
  </description>

  <maintainer email="bryanribas@gmail.com">Bryan Ribas</maintainer>

  <author email="bryanribas@gmail.com">Bryan Ribas</author>

  <license>CC BY-SA 4.0</license>

  <url type="website">http://www.r1b4z01d.com/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
